Add password reset capability

--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -8,5 +8,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type='submit'>Log In</button>
+        <hr />
+        <a href="{% url 'password-reset' %}">Forgot password?</a>
     </form>
 {% endblock content %}
