--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -15,7 +15,9 @@
             </h1>
             <p class="mb-8 leading-relaxed">Timesheets for companies that rely on location-based work.</p>
             <div class="flex justify-center">
-                <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">Sign Up</button>
+                <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">
+                    <a href="{% url 'signup' %}">Sign Up</a>
+                </button>
                 <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">
                     <a href="{% url 'login' %}">Log In</a>
                 </button>
