--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,14 +1,20 @@
 {% extends 'core/base.html' %}
+{% load tailwind_filters %}
 
 {% block title%}Log In | {% endblock %}
 
 {% block content %}
     <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > formss.py -->
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type='submit'>Log In</button>
-        <hr />
-        <a href="{% url 'password-reset' %}">Forgot password?</a>
-    </form>
+    <div class="max-w-xl mx-auto">
+        <form method="post">
+            {% csrf_token %}
+            <!--{{ form.as_p }}-->
+            {{ form|crispy }}
+            <button type="submit" class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Log In</button>
+            
+        </form>
+        <div class="mt-3 pt-2 border-t border-gray-200">
+            <a class=" hover:text-gray-400" href="{% url 'password-reset' %}">Forgot password?</a>
+        </div>
+</div>
 {% endblock content %}
