--- a/core/templates/registration/password_reset_complete.html
+++ b/core/templates/registration/password_reset_complete.html
@@ -3,8 +3,11 @@
 {% block title%}Password Reset Confirmation | {% endblock %}
 
 {% block content %}
-    <h1>Password reset complete!</h1>
-
-    <p>You have successfully reset your password.</p>
-    <a href="{% url 'login' %}">Click here to log in.</a>
+    <div class="max-w-xl mx-auto">
+        <h1 class="text-2xl pb-2">Password reset complete!</h1>
+        <p>You have successfully reset your password.</p>
+        <div class="mt-3 pt-2 border-t border-gray-200">
+            <a class=" hover:text-gray-400" href="{% url 'login' %}">Click here to log in.</a>
+        </div>
+    </div>
 {% endblock content %}
