--- a/core/templates/registration/password_reset_confirm.html
+++ b/core/templates/registration/password_reset_confirm.html
@@ -1,13 +1,17 @@
 {% extends 'core/base.html' %}
+{% load tailwind_filters %}
 
-{% block title%}Password Reset Confirmation | {% endblock %}
+{% block title%}Password Reset Submit | {% endblock %}
 
 {% block content %}
-    <h1>Enter your new password below.</h1>
-    
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type='submit'>Submit New Password</button>
-    </form>
+    <div class="max-w-xl mx-auto">
+        <h1 class="text-2xl pb-2">Enter new password below.</h1>
+        
+        <form method="post">
+            {% csrf_token %}
+            <!--{{ form.as_p }}-->
+            {{ form|crispy }}
+            <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Submit</button>
+        </form>
+    </div>
 {% endblock content %}
