--- a/core/templates/registration/password_reset_done.html
+++ b/core/templates/registration/password_reset_done.html
@@ -3,5 +3,7 @@
 {% block title%}Password Reset Email Sent | {% endblock %}
 
 {% block content %}
-    <h1>An email was sent to you to confirm your password reset.</h1>
+    <div class="max-w-xl mx-auto">
+        <h1 class="text-2xl pb-2">An email was sent to you to confirm your password reset.</h1>
+    </div>
 {% endblock content %}
