--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -1,14 +1,19 @@
 {% extends 'core/base.html' %}
+{% load tailwind_filters %}
 
 {% block title%}Password Reset | {% endblock %}
 
 {% block content %}
-    <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > forms.py -->
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type='submit'>Reset Password</button>
-        <hr />
-        <a href="{% url 'login' %}">Remember your password now? Log in instead.</a>
-    </form>
+    <div class="max-w-xl mx-auto">
+        <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > forms.py -->
+        <form method="post">
+            {% csrf_token %}
+            <!--{{ form.as_p }}-->
+            {{ form|crispy }}
+            <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Reset Password</button>
+        </form>
+        <div class="mt-3 pt-2 border-t border-gray-200">
+            <a class=" hover:text-gray-400" href="{% url 'login' %}">Remember your password now? Log in instead.</a>
+        </div>
+    </div>
 {% endblock content %}
