--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -31,7 +31,7 @@
                 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
                     {% if request.user.is_authenticated %}
                         <a href="#" class="mr-5 hover:text-gray-900">Profile</a>
-                        <a href="#" class="mr-5 hover:text-gray-900">Timesheet</a>
+                        <a href="{% url 'clock_in' %}" class="mr-5 hover:text-gray-900">Timesheet</a>
                         <a href="{% url 'logout' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
                             Log Out
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
