Add static files and images, and link them to appropriate html files

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -22,9 +22,7 @@
         <header class="text-gray-600 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
-                        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                    </svg>
+                    <img class="w-10 h-10" src="{% static 'images/space_trace_logo.png' %}">
                     <span class="ml-3 text-xl"><a href="{% url 'home_page' %}">SpaceTrace</a></span>
                 </a>
                 
@@ -32,6 +30,7 @@
                     {% if request.user.is_authenticated %}
                         <a href="#" class="mr-5 hover:text-gray-900">Profile</a>
                         <a href="{% url 'clock_in' %}" class="mr-5 hover:text-gray-900">Timesheet</a>
+                        <a href="{% url 'history' %}" class="mr-5 hover:text-gray-900">History</a>
                         <a href="{% url 'logout' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
                             Log Out
                             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
