--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -1,4 +1,5 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block title%}Home | {% endblock %}
 
@@ -7,7 +8,7 @@
 <section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+            <img class="object-cover object-center rounded" alt="hero" src="{% static 'images/home_page_graphic.png' %}">
         </div>
         <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Location-based time tracking
@@ -15,12 +16,18 @@
             </h1>
             <p class="mb-8 leading-relaxed">Timesheets for companies that rely on location-based work.</p>
             <div class="flex justify-center">
-                <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">
-                    <a href="{% url 'signup' %}">Sign Up</a>
-                </button>
-                <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">
-                    <a href="{% url 'login' %}">Log In</a>
-                </button>
+                {% if request.user.is_authenticated %}
+                    <button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">
+                        <a href="{% url 'signup' %}">Log Out</a>
+                    </button>
+                {% else %}
+                    <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">
+                        <a href="{% url 'signup' %}">Sign Up</a>
+                    </button>
+                    <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">
+                        <a href="{% url 'login' %}">Log In</a>
+                    </button>
+                {% endif %}
             </div>
         </div>
     </div>
