--- a/timesheet/templates/timesheet/clock-out.html
+++ b/timesheet/templates/timesheet/clock-out.html
@@ -3,7 +3,7 @@
 {% block title%}Timesheet | {% endblock %}
 
 {% block content %}
-    <section class="text-gray-600 body-font">
+    <section class="max-w-xl mx-auto text-gray-600 body-font">
         <div class="container px-5 py-5 mx-auto">
             <div class="flex flex-wrap w-full mb-20 flex-col items-left text-left">
                 <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Clocked In</h1>
