--- a/timesheet/templates/timesheet/history.html
+++ b/timesheet/templates/timesheet/history.html
@@ -8,21 +8,18 @@
             <div class="flex flex-col text-center w-full mb-20">
                 <h1 class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900">Timesheet History</h1>
                 {% if user_timesheets %}
-                    <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Filter as needed</p>
+                    <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Organized by most recent record at top</p>
                 {% else %}
                     <p class="lg:w-2/3 mx-auto leading-relaxed text-base">No timesheet records found.</p>
                 {% endif %}
             </div>
         {% if user_timesheets %}
-            <div class="lg:w-2/3 w-full mx-auto overflow-auto">
-                <label for="month-filter">Filter by Month:</label>
-                <input type="month" id="month-filter" onchange="filterByMonth(this.value)"
-                
+            <div class="lg:w-2/3 w-full mx-auto overflow-auto">              
                 <table class="table-auto w-full text-left whitespace-no-wrap">
                     <thead>
                         <tr>
                             <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tl rounded-bl">Date</th>
-                            <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100">Logged Time</th>
+                            <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100">Logged Time (H:MM:SS.MS)</th>
                             <th class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100">Associated Location</th>
                             <th class="w-10 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tr rounded-br"></th>
                         </tr>
