--- a/timesheet/templates/timesheet/clock-in.html
+++ b/timesheet/templates/timesheet/clock-in.html
@@ -1,4 +1,6 @@
 {% extends 'core/base.html' %}
+{% load static %}
+
 
 {% block title %}Timesheet | {% endblock title %}
 
@@ -11,14 +13,15 @@
         let map;
 
         async function initMap() {
-        const { Map } = await google.maps.importLibrary("maps");
+            const { Map } = await google.maps.importLibrary("maps");
 
-        map = new Map(document.getElementById("map"), {
-            center: { lat: 1, lng: 1 },
-            zoom: 13,
-        });
+            map = new Map(document.getElementById("map"), {
+                center: { lat: 1, lng: 1 },
+                zoom: 13,
+                mapId: '4bb9e065fd60ba4'
+            });
 
-        // Get user's current location and update map
+            // Get user's current location and update map
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(
                     function (position) {
@@ -31,9 +34,11 @@
                         map.setCenter(userLocation);
 
                         // Create a marker for the user's location
+
                         new google.maps.Marker({
                             position: userLocation,
                             map: map,
+                            icon: '{% static 'images/arrow.png' %}',
                             title: "Your Location",
                         });
                     },
@@ -44,13 +49,21 @@
             } else {
                 console.error("Geolocation is not supported by this browser.");
             }
+
+            // Add markers for each location passed from the Django view
+            {% for location in locations %}
+                new google.maps.Marker({
+                    position: { lat: {{ location.latitude }}, lng: {{ location.longitude }} },
+                    map: map,
+                    title: "{{ location.name }}",
+                });
+            {% endfor %}
         }
 
         initMap();
     </script>
 
     <div class="bg-gray-100 p-8">
-
         <div class="max-w-md mx-auto bg-white rounded p-6 shadow-md">
             <form method="POST">
                 {% csrf_token %}
@@ -61,4 +74,5 @@
             <script async src="https://maps.googleapis.com/maps/api/js?key={{ key }}&callback=initMap"></script>
 
         </div>
+    </div>
 {% endblock content %}
