--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,6 +15,8 @@
 
         <!-- Taiwind CDN, not ideal for production, instead use a minimized version of the CSS -->
         <script src="https://cdn.tailwindcss.com"></script>
+
+        {% block head %}{% endblock head %}
     </head>
 
     <body>
