--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -24,7 +24,7 @@
         <header class="text-gray-600 body-font">
             <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                    <img class="w-10 h-10" src="{% static 'images/space_trace_logo.png' %}">
+                    <img class="w-10 h-10" src="{% static 'images/space_trace_logo.png' %}" alt="Space Trace Logo">
                     <span class="ml-3 text-xl"><a href="{% url 'home_page' %}">SpaceTrace</a></span>
                 </a>
                 
@@ -60,6 +60,7 @@
         <!-- End main content -->
 
         <!-- Footer -->
+        <footer></footer>
         <!-- End footer -->
     </body>
 </html>
