--- a/timesheet/templates/timesheet/clock-in.html
+++ b/timesheet/templates/timesheet/clock-in.html
@@ -88,7 +88,7 @@
             map.setCenter(location);
 
             // Create a marker for the user's location
-                userMarker = new google.maps.Marker({
+            userMarker = new google.maps.Marker({
                 position: location,
                 map: map,
                 icon: '{% static 'images/arrow.png' %}',
@@ -103,7 +103,7 @@
         function checkGeofencing(userLocation) {
             // Locations is an array of locations with latitude and longitude
             const isWithinRadius = {% for location in locations %} checkRadius(userLocation, {{ location.latitude }}, {{ location.longitude }}, 804.672) {% if not forloop.last %}||{% endif %} {% endfor %};
-            console.log("isWithinRadius:", isWithinRadius);
+            // console.log("isWithinRadius:", isWithinRadius);
 
             // Enable or disable the clock-in button based on geofencing
             if (isWithinRadius) {
@@ -129,28 +129,28 @@
             return distance <= radius;
         }
 
-        function updateUserLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
-                    function (position) {
-                        const userLatitude = position.coords.latitude;
-                        const userLongitude = position.coords.longitude;
-                        const updatedUserLocation = { lat: userLatitude, lng: userLongitude };
+        // function updateUserLocation() {
+            // if (navigator.geolocation) {
+                // navigator.geolocation.getCurrentPosition(
+                    // function (position) {
+                        // const userLatitude = position.coords.latitude;
+                        // const userLongitude = position.coords.longitude;
+                        // const updatedUserLocation = { lat: userLatitude, lng: userLongitude };
 
                         // Update the map and check geofencing
-                        updateMap(updatedUserLocation);
+                        // updateMap(updatedUserLocation);
 
                         // Call checkGeofencing after updating the user's Location
-                        checkGeofencing(updatedUserLocation);
-                    },
-                    function (error) {
-                        console.error(`Error getting location: ${error.message}`);
-                    }
-                );
-            } else {
-                console.error("Geolocation is not supported by this browser.");
-            }
-        }
+                        // checkGeofencing(updatedUserLocation);
+                    // },
+                    // function (error) {
+                        // console.error(`Error getting location: ${error.message}`);
+                    // }
+                // );
+            // } else {
+                // console.error("Geolocation is not supported by this browser.");
+            // }
+        // }
         
 
         initMap();
