--- a/timesheet/templates/timesheet/clock-out.html
+++ b/timesheet/templates/timesheet/clock-out.html
@@ -1,52 +1,123 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block title%}Timesheet | {% endblock %}
 
 {% block content %}
-
-
     <!-- Load Google Maps API in the head -->
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <script>
         // Initialize the map
         let map;
+        let userMarker;
+        let userLocation = { lat: 1, lng: 1 };
+        let clockOutButton;
 
+        // JavaScript function that creates a map in the div (specified later in the html), taken from the Google Maps JavaScript API documentation.
         async function initMap() {
-        const { Map } = await google.maps.importLibrary("maps");
+            const { Map } = await google.maps.importLibrary("maps");
 
-        map = new Map(document.getElementById("map"), {
-            center: { lat: 1, lng: 1 },
-            zoom: 13,
-        });
+            map = new Map(document.getElementById("map"), {
+                center: userLocation,
+                zoom: 13,
+                mapId: '4bb9e065fd60ba4'
+            });
 
-        // Get user's current location and update map
+            // Enable or disable the clock-in button based on geofencing
+            // clockInButton = document.getElementById('clockInButton');
+
+            // Check if geolocation is supported by the browser.
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(
+                // Prompt the user for permission to access their location
+                navigator.geolocation.watchPosition(
+                    // Success callback function
                     function (position) {
-                        const userLocation = {
+                        // Get the user's latitude and longitude coordinates and assign them to variables in an object
+                        userLocation = {
                             lat: position.coords.latitude,
                             lng: position.coords.longitude,
+                            // Not sure if enableHighAccuracy should go here, but it does not break the code in this spot, and it seems to be accurately locating
+                            enableHighAccuracy: true,
                         };
 
-                        // Center the map on the user's location
-                        map.setCenter(userLocation);
-
-                        // Create a marker for the user's location
-                        new google.maps.Marker({
-                            position: userLocation,
-                            map: map,
-                            title: "Your Location",
-                        });
+                        updateMap(userLocation);
+                        checkGeofencing(userLocation);
                     },
+                    // Error callback function
                     function (error) {
                         console.error(`Error getting location: ${error.message}`);
-                    }
+                    } 
                 );
+            // If geolocation is not supported by the browser...
             } else {
                 console.error("Geolocation is not supported by this browser.");
             }
+
+            // Add markers for each location passed from the Django view
+            {% for location in locations %}
+                var marker = new google.maps.Marker({
+                    position: { lat: {{ location.latitude }}, lng: {{ location.longitude }} },
+                    map: map,
+                    title: "{{ location.name }}",
+                });
+
+                // Create a circle object and use bindTo() to tie it to the location marker, https://developers.google.com/maps/documentation/javascript/reference?csw=1#Circle 
+                var circle = new google.maps.Circle({
+                    map: map,
+                    radius: 804.672,    // 0.5 miles in meters
+                    fillColor: '#00ff00',
+                    strokeColor: '#02bd02',
+                    strokeWeight: 1,
+                    });
+                circle.bindTo('center', marker, 'position');
+            {% endfor %}
         }
+
+        // If a userMarker already exists, when the location of the user is updated, delete the old marker
+        function updateMap(location) {
+            if (userMarker) {
+                userMarker.setMap(null); // Remove the marker from the map
+            }
+
+            // Center the map on the user's location
+            map.setCenter(location);
+
+            // Create a marker for the user's location
+            userMarker = new google.maps.Marker({
+                position: location,
+                map: map,
+                icon: '{% static 'images/arrow.png' %}',
+                title: "Your Location",
+            });
+
+            // Check geofencing when the map is updated
+            // the 'checkGeofencing' function will enable or disable the clock-in button based on whether the user is within the geofenced area. The button is initially disabled and will only be enabled when the user is within the specified radius of any of the predefined locations
+            // checkGeofencing(location);
+        }
+
+        function checkGeofencing(userLocation) {
+            // Locations is an array of locations with latitude and longitude
+            const isWithinRadius = {% for location in locations %} checkRadius(userLocation, {{ location.latitude }}, {{ location.longitude }}, 804.672) {% if not forloop.last %}||{% endif %} {% endfor %};
+            console.log("isWithinRadius:", isWithinRadius);
+
+            // Enable or disable the clock-in button based on geofencing
+            if (isWithinRadius) {
+                clockOutButton.disabled = false;
+            } else {
+               document.forms["clockOutForm"].submit(); 
+            }
+        }
+
+        // The checkRadius function calculates the distance between the user and each location to determine if the user is within the radius
+        function checkRadius(userLocation, locationLat, locationLng, radius) {
+            const userLatLng = new google.maps.LatLng(userLocation.lat, userLocation.lng);
+            const locationLatLng = new google.maps.LatLng(locationLat, locationLng);
+            const distance = google.maps.geometry.spherical.computeDistanceBetween(userLatLng, locationLatLng);
+
+            // return true if user is within radius
+            return distance <= radius;
+        }      
 
         initMap();
     </script>
@@ -54,9 +125,9 @@
     <div class="bg-gray-100 p-8">
 
         <div class="max-w-md mx-auto bg-white rounded p-6 shadow-md">
-            <form method="POST">
+            <form method="POST" id="clockOutForm">
                 {% csrf_token %}
-                <button type="submit" name="clock_out" value="clock_out" class="mt-0 flex flex-wrap w-full mb-1 flex-col items-center text-center text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Clock Out</button>
+                <button id="clockOutButton" type="submit" name="clock_out" value="clock_out" class="mt-0 flex flex-wrap w-full mb-1 flex-col items-center text-center text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">Clock Out</button>
             </form>
 
             <div id="map" style="height: 60vh; width: 100%"></div>
