Update style of header and add footer

--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -4,19 +4,22 @@
 {% block title%}Log In | {% endblock %}
 
 {% block content %}
-    <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > formss.py -->
-    <div class="max-w-xl mx-auto">
-        <div class="mb-3 pb-2 border-b border-gray-200">
-            <a class=" hover:text-gray-400" href="{% url 'signup' %}">Don't have an account? Sign up instead.</a>
-        </div>
-        <form method="post">
-            {% csrf_token %}
-            <!--{{ form.as_p }}-->
-            {{ form|crispy }}
-            <button type="submit" class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Log In</button>
-        </form>
-        <div class="mt-3 pt-2 border-t border-gray-200">
-            <a class=" hover:text-gray-400" href="{% url 'password-reset' %}">Forgot password?</a>
+    <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > forms.py -->
+    <div class="bg-gray-100 p-8">
+        <div class="max-w-md mx-auto bg-white rounded p-6 shadow-md">
+            <div class="mb-3 pb-1 border-b border-gray-200">
+                <h1 class="text-center text-2xl font-medium text-gray-900 title-font mb-2">Log in to SpaceTrace</h1>
+            </div>
+            <form method="post">
+                {% csrf_token %}
+                <!--{{ form.as_p }}-->
+                {{ form|crispy }}
+                <a class="hover:text-gray-400" href="{% url 'password-reset' %}">Forgot password?</a>
+                <button type="submit" class="mt-3 w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Continue</button>
+            </form>
+            <div class="mt-3 pt-2 border-t border-gray-200">
+                Don't have an account? <a class=" hover:text-gray-400" href="{% url 'signup' %}"><u>Sign up instead.</u></a>
+            </div>
         </div>
     </div>
 {% endblock content %}
