--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -21,35 +21,34 @@
 
     <body>
         <!-- Navbar -->
-        <header class="text-gray-600 body-font">
-            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-                    <img class="w-10 h-10" src="{% static 'images/space_trace_logo.png' %}" alt="Space Trace Logo">
-                    <span class="ml-3 text-xl"><a href="{% url 'home_page' %}">SpaceTrace</a></span>
-                </a>
-                
-                <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-                    {% if request.user.is_authenticated %}
-                        <a href="{% url 'clock_in' %}" class="mr-5 hover:text-gray-900">Timesheet</a>
-                        <a href="{% url 'history' %}" class="mr-5 hover:text-gray-900">History</a>
-                        <a href="{% url 'logout' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-                            Log Out
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </a>
-                    {% else %}
-                        <a  href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign Up</a>
-                        <a href="{% url 'login' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
-                            Log In
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </a>  
-                    {% endif %}
-                </nav>
-
-
+        <header>
+            <div class="container mx-auto flex flex-nowrap p-5">
+                <div class="flex-none justify-start">
+                    <a href="{% url 'home_page' %}"><img class="h-12" src="{% static 'images/logo_with_text.png' %}" alt="Space Trace Logo"></a>
+                </div>
+                <div class="grow"></div>
+                <div class="flex-none">
+                    <nav>
+                        {% if request.user.is_authenticated %}
+                            <a href="{% url 'clock_in' %}" class="mr-5 hover:text-gray-900">Timesheet</a>
+                            <a href="{% url 'history' %}" class="mr-5 hover:text-gray-900">History</a>
+                            <a href="{% url 'logout' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+                                Log Out
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                        {% else %}
+                            <a  href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign Up</a>
+                            <a href="{% url 'login' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
+                                Log In
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                </svg>
+                            </a>  
+                        {% endif %}
+                    </nav>
+                </div>
             </div>
         </header>
         <!-- End navbar -->
@@ -60,7 +59,14 @@
         <!-- End main content -->
 
         <!-- Footer -->
-        <footer></footer>
+        <footer>
+            <div>
+                <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+                    <p class="text-gray-500 text-sm text-center sm:text-left">© 2024 SpaceTrace</p>
+
+                </div>
+            </div>
+        </footer>
         <!-- End footer -->
     </body>
 </html>
