--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 
-<section class="text-gray-600 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+<section class="bg-gray-100 text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-5 md:flex-row flex-col items-center">
         <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
             <img class="object-cover object-center rounded" alt="hero" src="{% static 'images/home_page_graphic.png' %}" alt="People in front of a globe">
         </div>
