Format a few items in the password reset links and set up a .env file to store environmental variables

--- a/core/templates/core/home_page.html
+++ b/core/templates/core/home_page.html
@@ -18,7 +18,7 @@
             <div class="flex justify-center">
                 {% if request.user.is_authenticated %}
                     <button class="inline-flex text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-lg">
-                        <a href="{% url 'signup' %}">Log Out</a>
+                        <a href="{% url 'logout' %}">Log Out</a>
                     </button>
                 {% else %}
                     <button class="inline-flex text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded text-lg">
