--- a/core/templates/registration/password_reset_form.html
+++ b/core/templates/registration/password_reset_form.html
@@ -4,16 +4,20 @@
 {% block title%}Password Reset | {% endblock %}
 
 {% block content %}
-    <div class="max-w-xl mx-auto">
-        <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > forms.py -->
-        <form method="post">
-            {% csrf_token %}
-            <!--{{ form.as_p }}-->
-            {{ form|crispy }}
-            <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Reset Password</button>
-        </form>
-        <div class="mt-3 pt-2 border-t border-gray-200">
-            <a class=" hover:text-gray-400" href="{% url 'login' %}">Remember your password now? Log in instead.</a>
+    <div class="bg-gray-100 p-8">
+        <div class="max-w-md mx-auto bg-white rounded p-6 shadow-md">
+            <div class="max-w-xl mx-auto">
+                <!-- Under venv > Lib > contrib > auth > views.py lives a LoginView (this is where it states that the view is linked to registration > login.html, which I had to create).  AuthenticationForm lives in venv > Lib > contrib > auth > forms.py -->
+                <form method="post">
+                    {% csrf_token %}
+                    <!--{{ form.as_p }}-->
+                    {{ form|crispy }}
+                    <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Reset Password</button>
+                </form>
+                <div class="mt-3 pt-2 border-t border-gray-200">
+                    Remember your password now? <a class=" hover:text-gray-400" href="{% url 'login' %}"><u>Log in instead.</u></a>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock content %}
