--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -39,7 +39,7 @@
                                 </svg>
                             </a>
                         {% else %}
-                            <a  href="{% url 'signup' %}" class="mr-5 hover:text-gray-900">Sign Up</a>
+                            <a  href="{% url 'signup' %}" class="inline-flex items-center border-0 py-1 px-3 focus:outline-none hover:bg-green-200 rounded text-base mt-4 md:mt-0">Sign Up</a>
                             <a href="{% url 'login' %}" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">
                                 Log In
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
