--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 <!--{{ form.as_p }}-->
                 {{ form|crispy }}
-                <a class="hover:text-gray-400" href="{% url 'password-reset' %}">Forgot password?</a>
+                <a class="hover:text-gray-400" href="{% url 'password-reset' %}"><u>Forgot password?</u></a>
                 <button type="submit" class="mt-3 w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Continue</button>
             </form>
             <div class="mt-3 pt-2 border-t border-gray-200">
