--- a/core/templates/registration/password_reset_confirm.html
+++ b/core/templates/registration/password_reset_confirm.html
@@ -4,14 +4,18 @@
 {% block title%}Password Reset Submit | {% endblock %}
 
 {% block content %}
-    <div class="max-w-xl mx-auto">
-        <h1 class="text-2xl pb-2">Enter new password below.</h1>
-        
-        <form method="post">
-            {% csrf_token %}
-            <!--{{ form.as_p }}-->
-            {{ form|crispy }}
-            <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Submit</button>
-        </form>
+    <div class="bg-gray-100 p-8">
+        <div class="max-w-md mx-auto bg-white rounded p-6 shadow-md">
+            <div class="max-w-xl mx-auto">
+                <h1 class="text-2xl pb-2">Enter new password below.</h1>
+                
+                <form method="post">
+                    {% csrf_token %}
+                    <!--{{ form.as_p }}-->
+                    {{ form|crispy }}
+                    <button type='submit' class="w-full text-white bg-green-500 py-2 px-6 focus:outline-none hover:bg-green-600 rounded-md text-lg">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 {% endblock content %}
