--- a/core/templates/registration/password_reset_done.html
+++ b/core/templates/registration/password_reset_done.html
@@ -3,7 +3,9 @@
 {% block title%}Password Reset Email Sent | {% endblock %}
 
 {% block content %}
-    <div class="max-w-xl mx-auto">
-        <h1 class="text-2xl pb-2">An email was sent to you to confirm your password reset.</h1>
-    </div>
+    <section class="bg-gray-100 text-gray-600 body-font">
+        <div class="max-w-xl mx-auto">
+            <h1 class="text-2xl pb-2">An email was sent to you to confirm your password reset.</h1>
+        </div>
+    </section>
 {% endblock content %}
